--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Einstein Biography</h5>
                             <p class="card-text">A brief biography of the genius, the man who started it all.</p>
-                            <a href="https://hamzadridi.github.io/einstein/" class="btn btn-primary" style="align-content: center;">See it in action</a>
+                            <a href="https://hamzadridi.github.io/einstein/" class="btn btn-dark" style="align-content: center;">See it in action</a>
                         </div>
                     </div>
                 </div>
@@ -84,7 +84,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Coming soon...</h5>
                             <p class="card-text">I will put the project description as soon as it became available.</p>
-                            <a href="#" class="btn btn-primary">future link</a>
+                            <a href="#" class="btn btn-dark">future link</a>
                         </div>
                     </div>
                 </div>
@@ -96,7 +96,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Coming soon...</h5>
                             <p class="card-text">I will put the project description as soon as it became available.</p>
-                            <a href="#" class="btn btn-primary">future link</a>
+                            <a href="#" class="btn btn-dark">future link</a>
                         </div>
                     </div>
                 </div>
