--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
     <!-- Link to CSS file -->
     <link href="style.css" rel="stylesheet">
-    <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
 </head>
 
 <body>
@@ -166,12 +165,12 @@
     <!--    social        -->
     <div class="container-fluid">
         <div class="row social justify-content-center">
-            <a href="facebook.com/mistermine"><div class="col-xs-4 col-md-2"><i class="fab fa-facebook-f "></i></div></a>
-            <a href="mailto:mr.dridi.hamza@gmail.com"><div class="col-xs-4 col-md-2"><i class="fas fa-at"></i></div></a>
-            <a href="twitter.com/mistermine"><div class="col-xs-4 col-md-2"><i class="fab fa-twitter    "></i></div></a>
-            <a href="https://plus.google.com/u/0/106504079877999657497"><div class="col-xs-4 col-md-2"><i class="fab fa-google-plus-g "></i></div></a>
-            <a href="#"><div class="col-xs-4 col-md-2"><i class="fab fa-linkedin-in "></i></div></a>
-            <a href="tel:+21626435471"><div class="col-xs-4 col-md-2"><i class="fas fa-phone"></i></div></a>
+            <a href="facebook.com/mistermine"><div class="col-xs-4 col-sm-2"><i class="icon-facebook"></i></div></a>
+            <a href="mailto:mr.dridi.hamza@gmail.com"><div class="col-xs-4 col-sm-2"><i class="icon-at"></i></div></a>
+            <a href="twitter.com/mistermine"><div class="col-xs-4 col-sm-2"><i class="icon-twitter"></i></div></a>
+            <a href="https://plus.google.com/u/0/106504079877999657497"><div class="col-xs-4 col-sm-2"><i class="icon-google-plus"></i></div></a>
+            <a href="#"><div class="col-xs-4 col-sm-2"><i class="icon-linkedin2"></i></div></a>
+            <a href="tel:+21626435471"><div class="col-xs-4 col-sm-2"><i class="icon-phone"></i></div></a>
         </div>
     </div>
     <!--    footer        -->
