--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
     <!-- Link to CSS file -->
+    <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Lobster|Raleway:900" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
 </head>
 
