--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta name="author" content="Dridi Hamza">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- Bootstrap CSS -->
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
     <!-- Link to CSS file -->
     <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Lobster|Raleway:900" rel="stylesheet">
